--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,4 +5,7 @@
         <h2>{{ details.title }}</h2>
         <p>{{ details.body }}</p>
     </div>
+
+    <a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a>
+    <p><a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a></p>
 {% endblock content %}
