--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,6 +6,6 @@
         <p>{{ details.body }}</p>
     </div>
 
-    <a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a>
-    <p><a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a></p>
+    <a href="{% url 'post_edit' details.pk %}">+ Edit Blog Post</a>
+    <p><a href="{% url 'post_delete' details.pk %}">+ Delete Blog Post</a></p>
 {% endblock content %}
